fixed typo on agentis project blurb

--- a/_posts/2000-01-08-org-lbnl.markdown
+++ b/_posts/2000-01-08-org-lbnl.markdown
@@ -14,4 +14,4 @@ Energy efficiency is supposed to be the low hanging fruit of clean energy. But f
  
 The [Lawrence Berkeley National Laboratory](http://www.lbl.gov/) - a scientific research facility funded by the Department of Energy - wants to use data to help businesses and homeowners understand their how much less energy their building could be using with the right modifications.
 
-Fellows will analyze energy data from [Agentis Enegy](agentisenergy.com) on thousands of buildings across the United States, using Berkeley Lab’s [building fingerprint tool](http://fingerprint.lbl.gov/) to predict future energy savings for different kinds of buildings. The goal is to make it possible for private investors to fund energy efficiency projects at scale.
+Fellows will analyze energy data from [Agentis Energy](http://www.agentisenergy.com) on thousands of buildings across the United States, using Berkeley Lab’s [building fingerprint tool](http://fingerprint.lbl.gov/) to predict future energy savings for different kinds of buildings. The goal is to make it possible for private investors to fund energy efficiency projects at scale.
