--- a/_posts/2000-01-09-org-mesa.markdown
+++ b/_posts/2000-01-09-org-mesa.markdown
@@ -5,6 +5,8 @@ img: [mesa.png]
 slug: mesa
 website: ['www.mpsaz.org']
 project: Getting kids into college
+wiki: https://github.com/dssg/match.edu/wiki
+repo: https://github.com/dssg/match.edu/
 ---
 
 With over 63,000 students, Mesa Public Schools is the largest school district in Arizona. It serves the City of Mesa, a suburb of Phoenix. Around 75% of Mesa students who start ninth grade end up graduating high school, right in line with the national graduation rate.
