--- a/_posts/2000-01-05-org-nfp.markdown
+++ b/_posts/2000-01-05-org-nfp.markdown
@@ -7,6 +7,9 @@ img: nfp.jpg
 website: 
   - "http://www.nursefamilypartnership.org"
 project: Tracking the impact of early childhood health programs
+blog-post: http://dssg.io/2013/07/31/the-match-game.html 
+wiki: https://github.com/dssg/nfp/wiki
+repo: https://github.com/dssg/nfp/
 ---
 
 When a young woman becomes pregnant before she’s ready, the risk factors for her and her baby escalate. Too often, the result is poverty, instability, and despair. 
