--- a/_posts/2000-01-14-org-divvy.markdown
+++ b/_posts/2000-01-14-org-divvy.markdown
@@ -6,6 +6,9 @@ slug: divvy
 img: ['cdot.jpg', 'divvy.jpg']
 website: ['http://www.cityofchicago.org/city/en/depts/cdot.html', 'http://divvybikes.com/']
 project: Predicting when Divvy bike share stations will be empty or full
+blog-post: http://dssg.io/2013/08/09/divvy-helping-chicagos-new-bike-share.html
+wiki: https://github.com/dssg/bikeshare/wiki
+repo: https://github.com/dssg/bikeshare/
 ---
 The City of Chicago just launched Divvy, a new bike share system designed to connect people to transit, and to make short one-way trips across town easy. Bike share is citywide bike rental - you can take a bike out at a station on one street corner and drop it off at another. 
 
@@ -18,5 +21,3 @@ To prevent this problem, bikeshare operators drive trucks around to reallocate b
 We're working with the City of Chicago's Department of Transportation to change this: by analyzing weather and bikeshare station trends, we'll predict how many bikes are likely to be at each Divvy station in the future. 
 
 By using predictive analytics, Divvy staff will be able to rebalance bikes proactively across the system, ensuring there's always a bike there when you need it - and making bike share a first-class mode of transportation in Chicago and beyond.
-
-<a href="https://github.com/dssg/bikeshare" class="btn btn-huge btn-success btn-block btn-embossed">View this project on Github!</a>
