--- a/_posts/2000-01-02-org-nfp.markdown
+++ b/_posts/2000-01-02-org-nfp.markdown
@@ -1,17 +1,21 @@
 ---
-type: org14
-org: Nurse-Family Partnership
+published: true
+type: org
+org: "Nurse-Family Partnership"
 slug: nfp
 img: nfp.jpg
-website: ['http://www.nursefamilypartnership.org/']
-project: Optimizing Treatment for Expectant Mothers
+website: 
+  - "http://www.nursefamilypartnership.org"
+project: Tracking the impact of early childhood health programs
+blog-post: http://dssg.io/2013/07/31/the-match-game.html 
+wiki: https://github.com/dssg/nfp/wiki
+repo: https://github.com/dssg/nfp/
 ---
 
-**Nurse-Family Partnership (NFP)** is an evidence-based community health program that provides first-time, low-income mothers with regular home visits from registered nurses, through pregnancy and the first two years of their child’s life. These visits promote healthy pregnancies, child care, and economic self-sufficiency in vulnerable populations during a critical time in a mother and child’s life. The program has been rigorously tested in randomized controlled trials since 1977, and nurses collect extensive data about their visits and family outcomes.
- 
-<a href="http://dssg.uchicago.edu/2013/07/31/the-match-game.html">Last year</a>, DSSG helped NFP find new ways to measure its effectiveness in different communities, combining the organization’s data with national demographic data to assess how the nurse visits affect measures such as the child’s vaccination and the mother’s employment and economic status. This summer, we will build an outcomes dashboard for NFP to monitor their performance on various measures and with different regional and demographic populations. The team will also build a “client triage” model that identifies mothers who may benefit the most from NFP’s program, and examine how different frequencies of home visits affect mother and child outcomes. The results will give NFP a clearer understanding of the target population that they can best serve, and the optimal “dosage” of nurse visits to benefit the families they assist.
+When a young woman becomes pregnant before she’s ready, the risk factors for her and her baby escalate. Too often, the result is poverty, instability, and despair. 
 
-**Mentor**: Young-Jin Kim
+[Nurse-Family Partnership](www.nursefamilypartnership.org) intervenes by pairing specially trained nurses with low-income families. Expecting mothers receive nurse home visits from pregnancy until the baby is two years old. The result: more successful pregnancies, more stable families, and healthier kids that do better in school and life.
 
-**Fellows**: Rafael Turner, Sarah Tan, Jeff Lockhart, Sarah Abraham
- 
+NFP’s approach is based on successful randomized controlled trials. They’ve been around for many years and have programs throughout the country. But as federal health care reform invests millions of dollars into home nurse visits, they’re being asked to quantify their recent impact on child health and family stability.
+
+We will measure their effectiveness by analyzing three years of data on NFP’s interventions and family outcomes.
