--- a/_posts/2000-02-07-org-nfp.markdown
+++ b/_posts/2000-02-07-org-nfp.markdown
@@ -7,9 +7,9 @@ website: ['http://www.nursefamilypartnership.org/']
 project: Optimizing Treatment for Expectant Mothers
 ---
 
-**Nurse-Family Partnership (NFP)** is an evidence-based community health program that provides first-time, low-income mothers with regular home visits from registered nurses, through pregnancy and the first two years of their child’s life. These visits promote healthy pregnancies, child care, and economic self-sufficiency in vulnerable populations during a critical time in a mother and child’s life. The program has been rigorously tested in randomized controlled trials since 1977, and nurses collect extensive data about their visits and family outcomes.
- 
-<a href="http://dssg.uchicago.edu/2013/07/31/the-match-game.html">Last year</a>, DSSG helped NFP find new ways to measure its effectiveness in different communities, combining the organization’s data with national demographic data to assess how the nurse visits affect measures such as the child’s vaccination and the mother’s employment and economic status. This summer, we will build an outcomes dashboard for NFP to monitor their performance on various measures and with different regional and demographic populations. The team will also build a “client triage” model that identifies mothers who may benefit the most from NFP’s program, and examine how different frequencies of home visits affect mother and child outcomes. The results will give NFP a clearer understanding of the target population that they can best serve, and the optimal “dosage” of nurse visits to benefit the families they assist.
+Young, low-income, first-time mothers and their babies often face dramatically increased risks to their health, education, and economic self-sufficiency. **Nurse-Family Partnership (NFP)**, a national nonprofit organization, intervenes by pairing these mothers with specially-trained, registered nurses. Expectant mothers receive regular home visits from pregnancy until the baby is two years old. The result: healthier pregnancies, more stable families, and better developmental outcomes for children.
+
+NFP’s approach is based on decades of research, and <a href="http://dssg.uchicago.edu/2013/07/31/the-match-game.html">last year</a> DSSG fellows helped NFP quantify its impact by combining its data with national demographic data to assess how nurse visits affect measures of early childhood development such as immunization and breastfeeding rates. Some local NFP agencies currently face greater demand than they can meet. With our models, we seek to identify mothers who will benefit the most from NFP’s programs and the most impactful timing of nurse visits. We hope to help NFP better understand their target population and personalize their services based on each mother’s needs.
 
 **Mentor**: Young-Jin Kim
 
