--- a/_posts/2000-02-03-org-cdph.markdown
+++ b/_posts/2000-02-03-org-cdph.markdown
@@ -15,4 +15,4 @@ DSSG has partnered with the **Chicago Department of Public Health** to help find
 
 *Mentor*: Eric Rozier
 
-*Fellows*: Alex Loewi, Subhabrata Majumdar, Joe Brew, Andrew Reece
+*Fellows*: Joe Brew, Alex Loewi, Subhabrata Majumdar, Andrew Reece
