--- a/_posts/2000-02-07-org-nfp.markdown
+++ b/_posts/2000-02-07-org-nfp.markdown
@@ -13,5 +13,5 @@ NFP’s approach is based on decades of research, and <a href="http://dssg.uchic
 
 **Mentor**: Young-Jin Kim
 
-**Fellows**: Rafael Turner, Sarah Tan, Jeff Lockhart, Sarah Abraham
+**Fellows**: Sarah Abraham, Jeff Lockhart, Sarah Tan, Rafael Turner 
  
